--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "levelup",
+  "name": "kcbadminton",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://elainelovesavocado.github.io/LevelUp/",
+  "homepage": "https://elainelovesavocado.github.io/kcbadminton/",
   "dependencies": {
     "-": "^0.0.1",
     "@emotion/react": "^11.11.3",
