--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://elainelovesavocado.github.io/kc-badminton/",
   "dependencies": {
     "-": "^0.0.1",
+    "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.2",
